@@ -82,7 +82,7 @@ __all__ = [
     "remove",
 ]
 
-__version__ = "1.9.5"
+__version__ = "1.9.6dev"
 __gdal_version__ = get_gdal_release_name()
 
 gdal_version = get_gdal_version_tuple()
